changed left most margins

--- a/templates/Login.html
+++ b/templates/Login.html
@@ -10,6 +10,7 @@
 <body>
 <div class="row">
 <div class="col-12 col-sm-12 col-lg-12">
+<div style="margin-left: 1em;">
 	<h1 style="text-align: center;">Welcome to the ATGU's Web Utility Page</h1>
 	{% if loggedIn == False: %}
 		<p>Usage of some of the tools on this page is restricted.<br>Login here for full access.</p> 
@@ -24,9 +25,10 @@
     <p>---------------------------------------------------------------</p>
 </div>
 </div>
+</div>
 <div class="row">
 <div class="col-12 col-sm-6 col-lg-6">
-<div style="margin-left: 1em;">
+<div style="margin-left: 2em;">
     <h2 style="margin: 0;">Tools:</h2>
     <a href="http://localhost:5003/"><h3>The ATGU's Gene Lookup Service</h3></a>
     <a href="http://localhost:5002/"><h3>SOME: the Significance of Mutation Engine</h3></a>
